--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,7 @@
 include:
   - board: nice_nano
     shield: cradio_left
+    snippet: zmk-usb-logging
   - board: nice_nano
     shield: cradio_right
+    snippet: zmk-usb-logging
